ssurgo popup close button fix on safari

--- a/src/styles/components/SSURGOPopup.sass
+++ b/src/styles/components/SSURGOPopup.sass
@@ -7,14 +7,11 @@
 		// pointer-events: none
 		.mapboxgl-popup-close-button
 			font-size: 45px
-			line-height: 0px
-			height: 0px
+			line-height: 22px
 			font-weight: 200
 			color: $grey
 			-webkit-appearance: none
-			padding: 0
-			top: 14px
-			right: 4px
+			padding: 3px 3px 8px 4px
 			// pointer-events: auto
 			&:focus
 				outline: none
